--- a/DeepSeek-Prover-V2/minif2f-deepseek/lakefile.toml
+++ b/DeepSeek-Prover-V2/minif2f-deepseek/lakefile.toml
@@ -13,6 +13,16 @@ maxSynthPendingDepth = 3
 [[require]]
 name = "mathlib"
 scope = "leanprover-community"
+source = "git"
+git = "https://github.com/leanprover-community/mathlib4"
+rev = "v4.9.0"
+
+[[require]]
+name = "aesop"
+scope = "leanprover-community"
+source = "git"
+git = "https://github.com/leanprover-community/aesop"
+rev = "v4.9.0"
 
 [[lean_lib]]
 name = "Minif2fDeepseek"
